# reconstructionArmCurrentAnalysis

./: CMakeLists.txt  README.md
data/: armsdata_J75_11-07(1.05t).txt  armsdata_J75_11-07(1.2t).txt  armsdata_J75_11-07(2.2t).txt  weights.txt
include/: armCurrentDataAnalysis.hpp
src/: armCurrentDataAnalysis.cpp  main.cpp
